# bitrix24-communication-summary-agent

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  CODEOWNERS.example  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
app/: __init__.py  database.py  main.py  masking.py  models.py  schemas.py  security.py  settings.py  state_machine.py
app/api/: admin.py  communications.py  health.py
app/services/: ai_provider.py  bitrix_adapter.py  bitrix_mock.py  bitrix_real.py  openai_provider.py  (+7 more)
config/: routing_rules.yaml
demo_data/: sample_communications.json
docs/: architecture.md  bitrix_cleanup_runbook.md  demo_script.md  demo_walkthrough.md  final_release_pack.md  git_ready_runbook.md  github_repo_launch.md  notion_case.md  project_status.md  publication_pack.md  release_note.md  repo_description.md  screenshots_capture_checklist.md  screenshots_plan.md
scripts/: _bitrix_validation_common.py  batch_live_validation.py  cleanup_audit.py  cleanup_live_artifacts.py  live_bitrix_validation.py  seed_demo_data.py  smoke_test.py
tests/: conftest.py  test_admin_actions.py  test_bitrix_mock.py  test_cleanup_audit_logic.py  test_deterministic_fallback.py  test_health.py  test_idempotency.py  test_intake_api.py  test_masking.py  test_mock_ai_provider.py  test_routing.py  test_schemas.py  test_state_machine.py  test_validation_helpers.py  test_worker_pipeline.py
(+13 files in other folders)
