[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitrix24-communication-summary-agent"
version = "0.1.0"
description = "Bitrix24 Communication Summary Agent demo/product prototype"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["bitrix24", "fastapi", "crm", "ai", "automation", "integration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "jinja2>=3.1,<4.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "pyyaml>=6.0,<7.0",
    "sqlalchemy>=2.0,<3.0",
    "tenacity>=9.0,<10.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "ruff>=0.6,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["config*", "docs*", "tests*", "demo_data*", "scripts*"]

[tool.setuptools.package-data]
app = ["templates/*.html"]
